[metadata]
name = InstagramProfile-AliBahaari
version = 1.3.3
author = Ali Bahaari
author_email = alibahaari1997@gmail.com
description = A package for fetching Instagram profile information of every ID you specify
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AliBahaari/InstagramProfile
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src